space alignment fixes

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -124,6 +124,10 @@ body, h1, h2, h3, h4, h5, h6, text, span {
   color: #262626;
 }
 
+.font-black-dark {
+  color: #212121;
+}
+
 .opacity-80 {
   opacity: 0.8;
 }
@@ -355,4 +359,9 @@ ol.carousel-indicators li.active {
   justify-content: center;
   flex-direction: column;
   text-align: center;
+}
+
+img {
+  max-width: 100%;
+  max-height: 100%;
 }
